packages/core/test/fixtures/parser/errors/tunnel-in-activity.idef0
activity A0 "tunnels live in context, not here" {
    I1 "in"
    T1 "stray tunnel decl — error"
}
